--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My Site</h1>
+    <h1>Welcome to MAP Services</h1>
   </header>
   <main>
-    <p>This is my completely free static site hosted on GitHub Pages.</p>
+    <p>Page is a work in Progress.</p>
   </main>
 </body>
 </html>
