--- a/index.html
+++ b/index.html
@@ -3,19 +3,107 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Free Static Site</title>
+  <title>Map Services - Empowering Growth</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 2rem; background: #f0f0f0; }
-    header { background: #333; color: #fff; padding: 1rem; text-align: center; }
-    main { margin: 2rem auto; max-width: 600px; text-align: center; }
+    /* Global Styles */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #fff;
+      color: #000;
+    }
+    /* Header Styles */
+    header {
+      background: #FF6600; /* Orange */
+      color: #000;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 3em;
+    }
+    header p {
+      margin: 10px 0 0;
+      font-size: 1.2em;
+    }
+    /* Container Styles */
+    .container {
+      padding: 20px;
+      max-width: 960px;
+      margin: 0 auto;
+    }
+    /* Section Styles */
+    section {
+      margin-bottom: 30px;
+    }
+    section h2 {
+      color: #FF6600; /* Orange for section headings */
+      font-size: 2em;
+      margin-bottom: 10px;
+    }
+    section p, section ul {
+      font-size: 1.1em;
+      line-height: 1.6;
+    }
+    section ul {
+      list-style-type: disc;
+      padding-left: 20px;
+    }
+    /* Image Styles */
+    img {
+      max-width: 100%;
+      height: auto;
+      border: 3px solid #FF6600;
+    }
+    /* Button Styles */
+    .button {
+      display: inline-block;
+      background: #FF6600;
+      color: #fff;
+      text-decoration: none;
+      padding: 12px 25px;
+      border-radius: 4px;
+      font-size: 1.1em;
+      transition: background 0.3s ease;
+    }
+    .button:hover {
+      background: #e65c00;
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>Welcome to MAP Services</h1>
+    <h1>Map Services</h1>
+    <p>Investing in Dreams, Empowering Growth</p>
   </header>
-  <main>
-    <p>Page is a work in Progress.</p>
-  </main>
+
+  <div class="container">
+    <section>
+      <h2>Our Mission</h2>
+      <p>
+        At Map Services, we believe every small business has the potential to transform into a leader of innovation. We specialize in nurturing promising startups in Bihar and West Bengal by providing both the capital and the strategic guidance necessary to fuel their growth.
+      </p>
+    </section>
+
+    <section>
+      <h2>Why Invest with Us?</h2>
+      <ul>
+        <li><strong>Focused Investment:</strong> We invest in promising small companies, ensuring personalized attention and support.</li>
+        <li><strong>Strategic Mentorship:</strong> Our team offers expert advice to help scale your business effectively.</li>
+        <li><strong>Community Impact:</strong> Our initiatives create jobs and foster economic growth in local communities.</li>
+      </ul>
+    </section>
+
+    <section>
+      <img src="assets/map-services.jpg" alt="Map Services">
+    </section>
+
+    <section style="text-align: center;">
+      <a href="#" class="button">Learn More</a>
+    </section>
+  </div>
 </body>
 </html>
+
